--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 	</dependencies>
  
 	<build>
-		<finalName>Eaxmple</finalName>
+		<finalName>bts</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
