--- a/pom.xml
+++ b/pom.xml
@@ -53,52 +53,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-   			<groupId>net.bytebuddy</groupId>
-    		<artifactId>byte-buddy-agent</artifactId>
-    		<version>1.14.10</version><!--$NO-MVN-MAN-VER$-->
-    		<scope>test</scope>
-		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.ibatis/ibatis-core -->
-        <dependency>
-            <groupId>org.apache.ibatis</groupId>
-            <artifactId>ibatis-core</artifactId>
-            <version>3.0</version>
-        </dependency>
-
-
-		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-		        <dependency>
-		            <groupId>org.mybatis</groupId>
-		            <artifactId>mybatis</artifactId>
-		            <version>3.4.0</version>
-		        </dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.springframework.batch/spring-batch-infrastructure -->
-		<dependency>
-		    <groupId>org.springframework.batch</groupId>
-		    <artifactId>spring-batch-infrastructure</artifactId>
-		</dependency>
 
 		<dependency>
-		    <groupId>org.mapstruct</groupId>
-		    <artifactId>mapstruct</artifactId>
-		    <version>1.6.0.Beta1</version> 
-		</dependency>
+	        <groupId>com.h2database</groupId>
+	        <artifactId>h2</artifactId>
+	        <scope>runtime</scope>
+	    </dependency>
+
+	
 
 	</dependencies>
  
