--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,30 @@
+# server:
+#   port: 8082
+
+# spring:
+#   datasource:
+#     url: jdbc:h2:mem:testdb
+#     username: sa
+#     password: 
+#   jpa:
+#     hibernate:
+#       ddl-auto: update
+#     show-sql: true
+#     properties:
+#       hibernate.dialect: org.hibernate.dialect.H2Dialect
+
 server:
   port: 8082
 
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: 
+    url: jdbc:postgresql://my-db-ksk.ct0oke8kwc6m.ap-south-1.rds.amazonaws.com:5432/bugdb
+    username: postgres
+    password: 12345678
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
-      hibernate.dialect: org.hibernate.dialect.H2Dialect
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+
